[project]
name = "getliveprice"
version = "0.1.0"
description = "FastAPI — live PT/PD/RH spot prices from Kitco + INR/USD exchange rate"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
]

[tool.uv]
package = false
